<resources>
    <string name="app_name">Plan My Meetings</string>
    <string name="register">Sign Up</string>
    <string name="login">Log In</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="password_again">password again</string>
    <string name="cancel">cancel</string>
    <string name="logo">logo</string>
    <string name="category">category</string>
    <string name="description">description</string>
    <string name="valid_for">valid for</string>
    <string name="status">status</string>
    <string name="creation_date">creationDate</string>
    <string name="last_update">lastUpdate</string>
    <string name="details">Details</string>
    <string name="format_date">%1$tm.%1$td %1$tH:%1$tM</string>
    <string name="format">%1$td/%1$tm/%1$tY</string>
    <string name="search">Search</string>
    <string name="logout">Log Out</string>
    <string name="creation_date_text">Creation Date</string>
    <string name="last_update_text">Last Update</string>
    <string name="remove">Remove</string>
    <string name="remove_note">Remove Note</string>
    <string name="add_note">Add Note</string>
    <string name="appointment_number">Appointment Number</string>
    <string name="related_place">Related Place</string>
    <string name="description2">Description</string>
    <string name="category2">Category</string>
    <string name="valid_for2">Valid For</string>
    <string name="add_appointment">Add\n Appointment</string>
    <string name="add">add</string>
    <string name="refresh">Refresh</string>
    <string name="note_number">Note Number</string>
    <string name="text">Text</string>
</resources>