<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:theme="@style/Theme.PlanMyMeetings"
    android:background="@color/background_color"
    tools:context=".RegisterActivity">

    <TextView
        style="@style/TitleText"
        android:text="@string/register"
        />

    <EditText
        android:id="@+id/userNameEditText"
        style="@style/AuthInputField"
        android:inputType="textPersonName"
        android:hint="@string/username"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/userEmailEditText"
        style="@style/AuthInputField"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/AuthInputField"
        android:inputType="textPassword"
        android:hint="@string/password"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/passwordAgainEditText"
        style="@style/AuthInputField"
        android:inputType="textPassword"
        android:hint="@string/password_again"
        tools:ignore="Autofill"
        android:layout_marginBottom="50dp"
        />

    <Button
        style="@style/MainButtonStyle"
        android:text="@string/register"
        android:layout_marginTop="30dp"
        android:onClick="register"
        />

    <Button
        style="@style/MainButtonStyle"
        android:text="@string/cancel"
        android:layout_marginTop="10dp"
        android:onClick="cancel"
        />

</LinearLayout>
