<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.planmymeetings.screens.add_appointment.AddAppointmentViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:theme="@style/Theme.PlanMyMeetings"
        tools:context=".screens.add_appointment.AddAppointmentActivity">

        <TextView
            style="@style/TitleText"
            android:lines="2"
            android:text="@string/add_appointment"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/idEdit"
            style="@style/AuthInputField"
            android:hint="@string/appointment_number"
            android:inputType="number"
            android:text="@={viewModel.id}"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/validForEdit"
            style="@style/AuthInputField"
            android:hint="@string/valid_for2"
            android:inputType="text"
            android:text="@={viewModel.validFor}"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/categoryEdit"
            style="@style/AuthInputField"
            android:hint="@string/category2"
            android:inputType="text"
            android:text="@={viewModel.category}"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/descriptionEdit"
            style="@style/AuthInputField"
            android:hint="@string/description2"
            android:inputType="text"
            android:text="@={viewModel.description}"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/relatedPlaceEdit"
            style="@style/AuthInputField"
            android:hint="@string/related_place"
            android:inputType="text"
            android:text="@={viewModel.relatedPlace}"
            tools:ignore="Autofill" />

        <Button
            style="@style/MainButtonStyle"
            android:layout_marginTop="10dp"
            android:onClick="@{() -> viewModel.add()}"
            android:text="@string/add" />

    </LinearLayout>
</layout>