<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    android:theme="@style/Theme.PlanMyMeetings">
    <item
        android:id="@+id/search_bar"
        android:icon="@drawable/search_icon"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/refresh_bar"
        android:icon="@drawable/refresh_icon"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_appointment_bar"
        android:icon="@drawable/add_icon"
        android:title="@string/add_appointment"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/log_out"
        android:icon="@drawable/logout_icon"
        android:orderInCategory="2"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>