<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.planmymeetings.screens.add_note.AddNoteViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:theme="@style/Theme.PlanMyMeetings"
        tools:context=".screens.add_appointment.AddAppointmentActivity">

        <TextView
            style="@style/TitleText"
            android:textAlignment="center"
            android:text="@string/add_note" />

        <EditText
            android:id="@+id/noteId"
            style="@style/AuthInputField"
            android:hint="@string/note_number"
            android:inputType="number"
            android:text="@={viewModel.id}"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/noteText"
            style="@style/AuthInputField"
            android:hint="@string/text"
            android:inputType="text"
            android:text="@={viewModel.text}"
            tools:ignore="Autofill" />

        <Button
            style="@style/MainButtonStyle"
            android:layout_marginTop="10dp"
            android:onClick="@{() -> viewModel.add()}"
            android:text="@string/add" />

    </LinearLayout>
</layout>