<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/Theme.PlanMyMeetings"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="270dp"
        android:layout_height="200dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

    <TextView
        style="@style/TitleText"
        android:text="Plan\nMy\nMeetings"
        android:textAlignment="center" />

    <Button
        style="@style/MainButtonStyle"
        android:onClick="gotoRegister"
        android:text="@string/register" />

    <Button
        style="@style/MainButtonStyle"
        android:layout_margin="5dp"
        android:onClick="gotoLogin"
        android:text="@string/login" />

</LinearLayout>